[package]
name = "mbtileserver"
description = "A Rust-based mbtiles server"
repository = "https://github.com/ka7eh/rust-mbtileserver"
version = "0.1.3"
authors = ["ka7eh <kaveh.k.a@gmail.com>"]
edition = "2018"
license = "ISC"

[badges]
travis-ci = { repository = "ka7eh/rust-mbtileserver" }
coveralls = { repository = "ka7eh/rust-mbtileserver" }

[dependencies]
clap = "2.33"
flate2 = "1.0"
hyper = "0.13"
lazy_static = "1.4"
libsqlite3-sys = "0.17"
pretty_env_logger = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.14"
regex = "1.3"
rusqlite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
